--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+	implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+	implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+
+	compileOnly 'org.projectlombok:lombok:1.18.6'
+	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
